ScrollIndicator no longer causes overflow

--- a/src/components/ScrollIndicator/ScrollIndicator.module.css
+++ b/src/components/ScrollIndicator/ScrollIndicator.module.css
@@ -11,7 +11,7 @@
 .scrollIndicator {
   position: absolute;
   z-index: -10;
-  width: 100vw;
+  width: 100%;
   height: 100vh;
   display: flex;
   align-items: flex-end;
